seo optimization - high

--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Diego Naranjo - Full Stack Developer specializing in React, Next.js, .NET and AI-driven solutions. Building intelligent, scalable web applications in Costa Rica." />
+    
+    <!-- Open Graph tags -->
+    <meta property="og:title" content="Diego Naranjo | Full Stack Developer" />
+    <meta property="og:description" content="Software Engineer specializing in Full-Stack Development and AI-driven solutions. Building intelligent, scalable applications using React, Next.js, and .NET." />
+    <!-- <meta property="og:image" content="https://yourdomain.com/og-image.jpg" /> -->
+    <meta property="og:url" content="https://www.dnmstudio.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Diego Naranjo Portfolio" />
+    
     <title>Diego Naranjo | Web Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Diego Naranjo",
+      "jobTitle": "Full Stack Developer",
+      "description": "Software Engineer specializing in Full-Stack Development and Artificial Intelligence",
+      "email": "diegoalonsonm@gmail.com",
+      "telephone": "+506 6046-9117",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "Costa Rica"
+      },
+      "url": "https://www.dnmstudio.io/",
+      "sameAs": [
+        "https://www.linkedin.com/in/diegonaranjo03/",
+        "https://github.com/diegoalonsonm"
+      ],
+      "knowsAbout": ["React", "Next.js", ".NET", "JavaScript", "TypeScript", "AI", "Machine Learning", "Clean Architecture", "System Design"],
+      "skills": ["Full Stack Development", "AI Engineering", "Cloud Computing", "Web Development"]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
